@@ -1051,7 +1051,7 @@ public class Document implements Serializable {
                 localText = localText.trim();
                 localText = localText.replace("  ", " ");
                 accumulated.append(localText);
-                Integer inte = new Integer(i);
+                Integer inte = Integer.valueOf(i);
                 if (blockDocumentHeaders == null)
                     blockDocumentHeaders = new ArrayList<Integer>();
                 if (!blockDocumentHeaders.contains(inte))
@@ -1420,6 +1420,9 @@ public class Document implements Serializable {
         }));
     }
 
+    /**
+     *  Get the document part corresponding to a particular segment type
+     */
     public SortedSet<DocumentPiece> getDocumentPart(TaggingLabel segmentationLabel) {
         if (labeledBlocks == null) {
             LOGGER.debug("labeledBlocks is null");
